fix the event hover on mobile.

--- a/themes/beyond-theme/sass/_page-events.scss
+++ b/themes/beyond-theme/sass/_page-events.scss
@@ -112,11 +112,16 @@
             text-align: center;
             width: 200px;
             margin: 0 auto;
+            @include desktop {
             z-index: 1000;
             }
         }
     }
+    }
     .event-background {
+        display: none;
+        @include desktop {
+        display: block;
         width: 100%;
         height: 100%;
         background-color: transparent;
@@ -124,6 +129,7 @@
         right: 0;
         border: 1px solid $black;
         border-radius: 5%;
+        }
     }
     .event-background:hover {
         @include desktop {
